# NeuroZip

./: .gitattributes  .gitignore  ARCHITECTURE.md  ECG.md  FMRI.md  FMRI_FINDINGS.md  LICENSE  NeuroZip.dc.html  PROTEIN.md  README.md  RQVAE.md  benchmark_retrieval.py  clip_proj.py  codec.py  data.py  demo.html  demo_clean.html  ecg_codec.py  ecg_data.py  evaluate.py  fmri_codec.py  fmri_codec_v5.py  fmri_data.py  fmri_neurozip.py  install.sh  make_ecg_results.py  make_protein_results.py  notebook.ipynb  out.nz  pitch-extended.md  pitch.html  pitch.md  presentation_prompt.md  protein_codec.py  protein_data.py  pyproject.toml  requirements.txt  results.md  rqvae.py  run_all.sh  (+21 more)
demo/assets/: summary.json
neurozip/: __init__.py  bootstrap.py  cli.py  clip_proj.py  codec.py  core.py  data.py  evaluate.py  layer.py  runtime.py  server.py  train.py
neurozip/models/: __init__.py  rqvae.py
packaging/: neurozip.rb
plots/: phase0_summary.json  phase1_bio_numbers.json  phase2_permutation.json
results/: retrieval_benchmark.json
scripts/: build_notebook.py  download_data.sh  download_fmri.sh  phase0_localization.py  phase1_bio_figures.py  phase2_permutation.py  run_all.sh  train_sweep.sh  train_sweep_v2.sh  train_sweep_v3.sh  train_sweep_v4.sh  train_v3_chain.sh
training/: README.md  evaluate.py  rqvae.py  train_rqvae.py
ui/: demo.html
