[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurozip"
version = "0.2.0b5"
description = "Task-aware neural compression for brain/biomedical signals."
readme = "README.md"
requires-python = ">=3.9"
# Source-available, noncommercial. NOT an OSI "open source" license: selling is forbidden.
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "xerneas3318" }]
keywords = ["compression", "eeg", "neural-codec", "clip", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
]
# Core install is stdlib-only on purpose: the CLI, the local UI server, and
# `import neurozip` all work with zero third-party deps, so `brew install` is fast.
# The neural layer / training stack lives behind the optional `ml` extra.
dependencies = []

[project.optional-dependencies]
# Just what the shipped CLI + upload UI need (kept lean so bootstrap is fast).
ml = ["numpy", "torch", "matplotlib"]
dev = ["datasets", "open_clip_torch", "pillow", "tqdm"]

[project.urls]
Homepage = "https://github.com/xerneas3318/NeuroZip"

[project.scripts]
neurozip = "neurozip.cli:main"

[tool.setuptools]
packages = ["neurozip", "neurozip.models"]
